<resources>
    <string name="app_name">LOGINapp</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


    <!-- strings.xml -->
    <string name="your_favour">

        Your favourite foods delivered fast at your door.
    </string>
    <!-- strings.xml -->
    <string name="welcome_to_">

        Welcome to\nFoodHub
    </string>


    <!-- strings.xml -->
    <string name="sign_in_wit">

        sign in with
    </string>

    <!-- strings.xml -->
    <string name="sign_in">

            Sign In
        </string>


    <!-- strings.xml -->
    <string name="already_hav">

            Already have an account?
        </string>
    <string name="login">LOGIN</string>

    <!-- styles.xml -->
    <style name="full_name">

        <item name="android:textSize">
            16sp
        </item>

        <item name="android:textColor">
            #9796A1
        </item>

    </style>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up_with">Sign up with</string>
    <string name="username">Username</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>

    <!-- strings.xml -->
    <string name="what_would_">
            What would you like\nto order
        </string>


</resources>