<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity4"
    android:background="@drawable/sw">

    <!-- Login -->
    <LinearLayout
        android:layout_width="346dp"
        android:layout_height="530dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_alignParentLeft="true"
            android:gravity="top"
            android:lineSpacingExtra="7sp"
            android:text="@string/login"
            android:textAppearance="@style/login"
            android:textSize="48sp"
            android:translationY="-3.64sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/emailFieldLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Password"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/passwordFieldLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Forgot password?"
            android:textAlignment="center"
            android:textColor="#000000" />

        <Button
            android:id="@+id/submitLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Submit" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/don_t_have_an_account"
                android:textAlignment="center"
                android:textColor="#000000" />

            <Button
                android:id="@+id/signUpLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="sign up" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_with"
            android:textAlignment="center"
            android:textColor="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="facebook " />

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Google " />
        </LinearLayout>
    </LinearLayout>

    <!--
      Font family: Sofia Pro
      Line height: 44sp
      translationY 3.64sp compensates for the line height adjustment of text
    -->


</androidx.constraintlayout.widget.ConstraintLayout>